style: fix horizontal overflow on component mount

--- a/app/globals.css
+++ b/app/globals.css
@@ -17,16 +17,12 @@
   --font-mono: var(--font-geist-mono);
 }
 
-body {
-  background: var(--background);
-  color: var(--foreground);
-  scrollbar-gutter: stable;
-}
-
 body html {
   overflow-x: hidden;
 }
 
-html {
-  overflow-y: scroll;
+body {
+  background: var(--background);
+  color: var(--foreground);
+  scrollbar-gutter: stable;
 }
